@@ -23,7 +23,8 @@ SOURCES = \
 	markup.c	\
 	utf8.c		\
 	endian.c	\
-	module.c
+	module.c	\
+	memory.c
 
 test_eglib_SOURCES = $(SOURCES)
 
