@@ -21,6 +21,7 @@ DEFINE_TEST_GROUP_INIT_H(markup_tests_init);
 DEFINE_TEST_GROUP_INIT_H(utf8_tests_init);
 DEFINE_TEST_GROUP_INIT_H(endian_tests_init);
 DEFINE_TEST_GROUP_INIT_H(module_tests_init);
+DEFINE_TEST_GROUP_INIT_H(memory_tests_init);
 
 static Group test_groups [] = {	
 	{"string",    string_tests_init}, 
@@ -44,6 +45,7 @@ static Group test_groups [] = {
 	{"utf8",      utf8_tests_init},
 	{"endian",    endian_tests_init},
 	{"module",    module_tests_init},
+	{"memory",    memory_tests_init},
 	{NULL, NULL}
 };
 
